--- a/jalabarentoclothingshop/package.json
+++ b/jalabarentoclothingshop/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && node deploy.cjs"
+    "deploy": "npm run build && node deploy.js"
   },
   "dependencies": {
     "react": "^19.2.0",
